--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.525.0",
-    "next": "^15.3.5",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-i18next": "^15.6.0",
     "react-icons": "^5.5.0",
     "tsparticles": "^3.8.1"
@@ -31,7 +31,7 @@
     "@types/react-dom": "^19",
     "@types/react-i18next": "^7.8.3",
     "eslint": "^9",
-    "eslint-config-next": "15.3.5",
+    "eslint-config-next": "^16.1.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
